# journal-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py  run.py
src/controllers/: auth_services.py  home_services.py  user_services.py  utility_services.py
src/core/: config.py
src/database/: connect.py  models.py
src/middleware/: authorization.py  logging.py  rate_limitter.py
src/routes/: auth.py  home.py  user.py  utility.py
src/schemas/: auth_schemas.py  default_schemas.py  home.py  requests.py  responses.py  user_schemas.py
