[tool.poetry]
name = "journal-api"
version = "0.1.0"
description = "Backend services for Journal App."
authors = ["MuzaffarShaikh0201 <114210961+MuzaffarShaikh0201@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.0"
coloredlogs = "^15.0.1"

[tool.poetry.scripts]
api = "src.run:run"
dev = "src.run:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
