[tool.poetry]
name = "journal-api"
version = "0.1.0"
description = "Backend services for Journal App."
authors = ["MuzaffarShaikh0201 <114210961+MuzaffarShaikh0201@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.0"
coloredlogs = "^15.0.1"
psycopg2 = "2.9.10"
sqlalchemy = "^2.0.36"
bcrypt = "3.2.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.scripts]
api = "src.run:run"
dev = "src.run:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
